chore: remove documentation files from git (keep only README.md)

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,12 @@ coverage/
 *.tmp
 *.bak
 Thumbs.db
+# Documentation (keep local only)
+ENVIRONMENT_SETUP.md
+QUICK_START.md
+ADMIN_FEATURES.md
+CV_CREATION_GUIDE.md
+IMPLEMENTATION_SUMMARY.md
+NAMECHEAP_DEPLOYMENT.md
+PROFILE_MEDIA_IMPROVEMENTS.md
+UPDATE_SUMMARY.md
