--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "bwip-js": "^2.0.11",
     "cors": "^2.8.6",
