--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "i18next": "^25.8.13",
+    "i18next-browser-languagedetector": "^8.2.1",
     "next": "^14.2.35",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^16.5.4"
   }
 }
